updated fontawsome link

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
         type="text/css" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css"
-        integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/8a0cef6236.js" crossorigin="anonymous"></script>   
+        
     <title>Rosie</title>
 </head>
 
 <body>
     <header>
-
+            
     </header>
     <section>
-
+        <i class="fas fa-thumbs-up fa-5x"></i>
     </section>
     <footer>
 
