--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         <div class="row">
             <a class="col-md-4 logo" href="index.html"></a>
             <div class="col-md-8">
+                <div class="row bg-color-name-title">
+                    <div class="col heading">
+                    <h1 class="name">Rosie Odenkirk</h1>
+                    <h2 class="title">Full Stack Developer</h2>
+                </div>
         
             </div>
         </div>
@@ -26,3 +31,4 @@
     </footer>
 </body>
 </html>
+
