--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             </div>
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Social</h5>
-                <Ul class="list-inline social-links">
+                <ul class="list-inline social-links">
                     <li class="list-inline-item">
                         <a href="#" target="_blank">
                             <i class="fa fa-facebook" aria-hidden="true"></i>
@@ -221,7 +221,7 @@
                             <span class="sr-only">Youtube</span>
                         </a>
                     </li>
-                </Ul>
+                </ul>
             </div>
 
         </div>
