--- a/resume.html
+++ b/resume.html
@@ -55,7 +55,94 @@
 
     </header>
 
-    <section>
+    <section class="container-fluid">
+        <div class="row">
+            <div class="col-md-4 bg-color-personal-info section-column">
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="section-heading uppercase">
+                            Work History
+                        </h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-8 bg-color-three-reasons section-column">
+                <div class="row">
+                    <div class="col">
+                        <h3 class="section-heading uppercase">My Skills</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-tv" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Front End</h4>
+                                <p>I am learning to become a Full Stack software developer, utilizing my life skills and
+                                    experience to achieve my goals.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-gears" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Back End</h4>
+                                <p>I learn and understand coding and apply the knowledge I have learnt in the online
+                                    studies in real world Coding, usign HTML and CSS.
+                                </p>
+                            </div>
+                        </div>
+                    </div>               
+                </div>
+            
+            <div class="row progress-section">
+                <div class="col">
+                    <div class="progress">
+                        <div class="progress-bar " role="progress-bar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" 
+                        style="width: 90%;">
+                        <span class="sr-only">90% complete</span>
+                        </div> 
+                        <span class="progress-type">HTML/HTML5</span>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar bg-success" role="progress-bar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100
+                        " style="width: 70%;">
+                        <span class="sr-only"> 70% complete</span>
+                        </div> 
+                        <span class="progress-type">CSS/CSS3</span>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar bg-info" role="progress-bar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100
+                        " style="width: 60%;">
+                        <span class="sr-only">60% complete</span>
+                        </div> 
+                        <span class="progress-type">JavaScript/jQuery</span>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar bg-warning" role="progress-bar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100
+                        " style="width: 40%;">
+                        <span class="sr-only">40% complete</span>
+                        </div> 
+                        <span class="progress-type">Django/Python</span>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar bg-danger" role="progress-bar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100
+                        " style="width: 30%;">
+                        <span class="sr-only">30% complete</span>
+                        </div> 
+                        <span class="progress-type">SQL/NoSQL</span>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </div>
+
 
     </section>
     <footer class="container-fluid">
