added resume work history

--- a/resume.html
+++ b/resume.html
@@ -57,14 +57,31 @@
 
     <section class="container-fluid">
         <div class="row">
-            <div class="col-md-4 bg-color-personal-info section-column">
+            <div class="col-md-4 bg-color-work-history section-column">
                 <div class="row">
                     <div class="col-12">
-                        <h3 class="section-heading uppercase">
+                        <h3 class="history-heading uppercase">
                             Work History
                         </h3>
                     </div>
                 </div>
+            <div class="timeline-item" data-dates="02/1986 - 07/1990">
+            <h4>Barking Abbey Comprehensive School</h4>
+             <p>Multi Subject Exams</p>
+            </div>
+            <div class="timeline-item" data-dates="07/1990 - 07/1996">
+            <h4>Natwest Bank</h4>
+             <p>Supervisor at clearing House</p>
+            </div>
+            <div class="timeline-item" data-dates="07/1996 - 04/2004">
+            <h4>Royal London Insurance</h4>
+             <p>Financial Consultant and Mortgage Adviser</p>
+            </div>
+            <div class="timeline-item" data-dates="04/2004 - Present">
+            <h4>Metropolitian Police UK</h4>
+             <p>Police Officer</p>
+            </div>
+
             </div>
             <div class="col-md-8 bg-color-three-reasons section-column">
                 <div class="row">
