--- a/contact.html
+++ b/contact.html
@@ -55,8 +55,28 @@
 
     </header>
 
-    <section>
+    <section class="container-fluid">
+        <div class="row bg-color-contrast">
+            <div class="col">
+                <h3 class="contact-heading uppercase text-center">Got a project in mind?</h3>
+                <h5 class="uppercase text-center">Lets work together!</h5>
 
+                <div class="center-form">
+                    <form>
+                        <input type="text" name="name" id="fname" class="form-control" placeholder="Name" required/>
+                        <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required/>
+                        <textarea rows="5" name="Projectsummary" id="Projectsummary" class="form-control" 
+                        placeholder="Project description" required></textarea>
+                            <div class="form-row text-center">
+                            <div class="col">
+                                <button type="submit" class="btn btn-secondary">Send project request</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        
     </section>
     <footer class="container-fluid">
         <div id="footer-details" class="row">
